# auth_api

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  db_schema.sql  docker-compose.yaml  mail_template.j2  migrate_users.py  pyproject.toml  vpn_template.j2
auth_api/: __init__.py  ca_step.py  ca_vault.py  common.py  ldap.py  user.py
auth_api/commands/: admin.py  ssh.py  ssh_get_keys_yaml.py  ssh_no_mfa.py  ssh_ro_sftp.py  ssh_service_accounts.py  ssh_slurm.py  update_users.py  vpn.py
auth_api/templates/: access_denied.html  base.html  index.html  mail_template.j2  mfa.html  ssh.html  vpn.html  vpn_download.html  vpn_expiry_mail_template.j2
auth_api/views/: api.py  dashboard.py  to_migrate.py
config/: db_schema.sql  mail_template.j2
db/: db_schema.sql
db/migrations/: 001_initial_users.sql  002_initial mfa_requests.sql  002_initial ssh_keys.sql  002_initial vpn_keys.sql  003_view_revoked_vpn_keys.sql
docker/: ca.yaml  ldap.yaml  main.yaml  maint_auth.yaml  smtp.yaml  start-container
example_configs/: db.yaml  ldap.yaml  main.yaml  smtp.yaml
example_configs/ca_step/: ca.yaml  ca_password.txt
example_configs/ca_vault/: ca.yaml
lib/: aapi.py  auth_api.py  mfa.py
web/: __init__.py
